# weather

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  forecast.json  forecast_notebook.ipynb  hourly_values_nyc.csv  main.ipynb  main.py  map-it.py  notebook_1.ipynb  pyproject.toml  requirements.txt  test_fix.py  tsconfig.json
conf/: Caddyfile
notebooks/: forecast_notebook.ipynb  forecast_period.ipynb  main.ipynb
src/Cli/: main.py
src/WebApp/: __init__.py  app.py
src/gui/: app.py
src/weather/: __init__.py  api.py  models.py
static/: index.html  script.js  script.ts
static/html/: index.html  script.js
utils/: __init__.py  api.py  models.py
