[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "textual>=3.5.0",
    "types-requests>=2.32.4.20250611",
]
[project.scripts]
cli = "Cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
